<resources>
    <string name="app_name">ANIMARKER</string>
    <string name="menu_addAnimarker">Add</string>
    <string name="save_animarker"> SAVE ANIMARKER </string>
    <string name="menu_cancelAnimarker">Cancel</string>
    <string name="hint_Destination">Destination</string>
    <string name="button_addAnimarker">Add Animarker</string>
    <string name="hint_animarkerTitle">Species Spotted</string>
    <string name="hint_animarkerDescription">Description </string>
    <string name="button_addImage"> Add Animal Image </string>
    <string name="button_delete_animarker">DELETE ANIMARKER</string>
    <string name="select_animarker_image">Select Animarker image</string>
    <string name="change_animarker_image">CHANGE ANIMARKER IMAGE</string>
    <string name="enter_animarker_title"> Please enter a Animarker Title </string>
    <string name="button_location">SET LOCATION</string>
    <string name="rate_name">RatingkBarInKotlin</string>
    <string name="select_date">Select Date</string>
    <string name="todo">TODO</string>
    <string name="update_date">ADD Date</string>
    <string name="hint_animarkerDate">Date Spotted</string>
    <string name="datePicker">Datepicker</string>
    <string name="login">LOGIN</string>
    <string name="firstName"> FIRST NAME</string>
    <string name="lastName"> LAST NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_password">PASSWORD</string>
    <string name="login_button">LOGIN</string>
    <string name="addAnimarkerHeader">Add a AnimarkerHeading</string>
    <string name="signup">SIGN UP</string>
    <string name="search_box">Type search terms here</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit_rating">SUBMIT RATING</string>
    <string name="Species_Spotted">Species Spotted</string>
    <string name="menu_search">Search Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">FIRST NAME</string>
</resources>